styled the project 'expand' toggle to prevent it from wrapping

--- a/src/react/components/CompositeViewer/CompositeViewer.css
+++ b/src/react/components/CompositeViewer/CompositeViewer.css
@@ -8,7 +8,7 @@
 			display: flex;
 			margin: 1em 0;
 			justify-content: space-between;
-			align-items: center;
+			align-items: flex-start;
 		}
 			.scrollers {
 				display: flex;
@@ -39,6 +39,9 @@
 						display: none;
 					}
 			.expandToggle {
+				min-width: 5.75em;
+				position: relative;
+				top: 0.125em;
 				color: var(--base-color);
 				background-color: transparent;
 				text-transform: lowercase;
